# top-consumers-plugin

./: .gitignore  AUTHORS  ChangeLog  MANIFEST.in  README.rst  setup.cfg  setup.py
topconsumersplugin/: __init__.py
topconsumersplugin/dashboards/admin/topconsumers/: panel.py  tables.py  urls.py  views.py
topconsumersplugin/dashboards/admin/topconsumers/templates/topconsumers/: _filter.html  index.html
topconsumersplugin/enabled/: _31000_topconsumersplugin.py
