[metadata]
name = topconsumersplugin
author = Tinkoff Bank, JSC
author-email = cloud-ops@tinkoff.ru
summary = A Top Consumers panel plugin for OpenStack Dashboard
description-file = README.rst
home-page = https://tinkoff.cloud
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
[files]
packages =
    topconsumersplugin
